--- a/src/components/start-date/start-date.scss
+++ b/src/components/start-date/start-date.scss
@@ -51,7 +51,7 @@
 .start-date-container {
     width: 68%;
     margin:0 auto;
-    padding-top: 96px;
+    padding-top: 106px;
 }
 
 .start-date-input-group, .start-date-target {
@@ -64,7 +64,7 @@
     position: absolute;
     bottom: 0px;
     width: 100%;
-    height: 20vh;
+    height: 18vh;
 }
 .start-date-back-button{
     font-family: Lato;
@@ -147,7 +147,8 @@
 }
 .start-date-next{
     margin-bottom: 0px;
-    margin-top: 50px;
+    margin-top: 60px;
+    padding-top:10px
 }
 .Rectangle-4 {
     width: 255px;
